2011-04-02  Paul Eggert  <eggert@cs.ucla.edu>

	* xfns.c (make_invisible_cursor): Don't return garbage
	if XCreateBitmapFromData fails.

	* xselect.c (x_get_local_selection, x_handle_property_notify):
	Remove vars that are set but not used.

2011-04-01  Paul Eggert  <eggert@cs.ucla.edu>

	* xfns.c (x_create_tip_frame): Remove var that is set but not used.
	(make_invisible_cursor): Initialize a possibly-uninitialized variable.

	* xterm.c (x_scroll_bar_to_input_event) [!USE_GTK]:
	Remove var that is set but not used.
	(scroll_bar_windows_size): Now size_t, not int.
	(x_send_scroll_bar_event): Use size_t, not int, for sizes.
	Check for overflow.

	* xfaces.c (realize_named_face): Remove vars that are set but not used.
	(map_tty_color) [!defined MSDOS]: Likewise.

	* term.c (tty_write_glyphs): Use size_t; this avoids overflow warning.

	* coding.c: Remove vars that are set but not used.
	(DECODE_COMPOSITION_RULE): Remove 2nd arg, which is unused.
	All callers changed.
	(decode_coding_utf_8, decode_coding_utf_16 decode_coding_emacs_mule):
	(decode_coding_iso_2022, encode_coding_sjis, encode_coding_big5):
	(decode_coding_charset): Remove vars that are set but not used.

	* bytecode.c (Fbyte_code) [!defined BYTE_CODE_SAFE]: Remove var
	that is set but not used.

	* print.c (print_object): Remove var that is set but not used.

	Replace 2 copies of readlink code with 1 gnulib version (Bug#8401).
	The gnulib version avoids calling malloc in the usual case,
	and on 64-bit hosts doesn't have some arbitrary 32-bit limits.
	* fileio.c (Ffile_symlink_p): Use emacs_readlink.
	* filelock.c (current_lock_owner): Likewise.
	* lisp.h (READLINK_BUFSIZE, emacs_readlink): New function.
	* sysdep.c: Include allocator.h, careadlinkat.h.
	(emacs_no_realloc_allocator): New static constant.
	(emacs_readlink): New function.
	* deps.mk (sysdep.o): Depend on ../lib/allocator.h and on
	../lib/careadlinkat.h.

2011-04-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add lexical binding.
